--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <header>
     <h1>QuizTion</h1>
   </header>
-  
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,16 +17,14 @@
       <li><a href="signup.html">Sign Up</a></li>
     </ul>
   </nav>
-  
   <main>
     <section id="home-section">
       <h1>Welcome to QuizTion</h1>
-      <p1>QuizTion is a platform where you can learn and practice various subjects through quizzes.</p1><br><br><br><br><br>
-      
+      <p1>QuizTion is a platform where you can learn and practice various subjects through quizzes.</p1><br><br>
      
     </section>
   </main>
   
-  
 </body>
 </html>
+
