--- a/question_bank_form.html
+++ b/question_bank_form.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Question Bank Form</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="question_bank_form.css">
 </head>
 
 <body>
