--- a/submit_question.html
+++ b/submit_question.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Submit Question</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="submit_question.css">
 </head>
 
 <body>
