--- a/signup.html
+++ b/signup.html
@@ -2,46 +2,40 @@
 <html>
 
 <head>
-    <title>QuizTion - Sign Up</title>
+    <title>Signup</title>
     <link rel="stylesheet" type="text/css" href="signup.css">
 </head>
 
 <body>
-    <header>
-        <h1>QuizTion</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="tutorial.html">Tutorial</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section>
-            <h2>Sign Up</h2>
-            <form id="signup-form">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <input type="submit" value="Sign Up">
-            </form>
-        </section>
-    </main>
-
-   
-
-    <script src="signup.js"></script>
+        <header>
+            <h1>QuizTion</h1>
+        </header>
+    
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="tutorial.html">Tutorial</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+        </nav>
+    <div class="container">
+        <h1>Signup</h1>
+        <form id="signup-form">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+            <label for="role">Role</label>
+            <select id="role" name="role">
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+            <button type="submit">Signup</button>
+        </form>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
